k3d-github/.kubefirst/clusters/mgmt-template/components/staging/metaphor-frontend/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-frontend-staging-ingress
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`metaphor-frontend-staging.<LOCAL_DNS>`)
    services:
    - name: metaphor-frontend-staging
      port: 80
  tls:
    secretName: metaphor-frontend-staging-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: staging
spec:
  redirectScheme:
    scheme: https
    permanent: true
